--- a/nginx.conf
+++ b/nginx.conf
@@ -43,15 +43,15 @@ http {
     }
     # sonar
     location /sonar {
-      proxy_pass http://127.0.0.1:9000;
+      proxy_pass http://localhost:9000;
     }
     # redmine
     location /redmine {
-      proxy_pass http://127.0.0.1:3000;
+      proxy_pass http://localhost:3000;
     }
     # jenkins
     location /jenkins {
-      proxy_pass http://127.0.0.1:10083;
+      proxy_pass http://localhost:10083;
     }
   }
 }
