--- a/nginx.conf
+++ b/nginx.conf
@@ -43,15 +43,15 @@ http {
     }
     # sonar
     location /sonar {
-      proxy_pass http://localhost:9000;
+      proxy_pass http://sonar;
     }
     # redmine
     location /redmine {
-      proxy_pass http://localhost:3000;
+      proxy_pass http://redmine;
     }
     # jenkins
     location /jenkins {
-      proxy_pass http://localhost:10083;
+      proxy_pass http://jenkins:8080;
     }
   }
 }
