--- a/nginx.conf
+++ b/nginx.conf
@@ -43,15 +43,15 @@ http {
     }
     # sonar
     location /sonar {
-      proxy_pass http://127.0.0.1:9000;
+      proxy_pass http://sonar:9000;
     }
     # redmine
     location /redmine {
-      proxy_pass http://127.0.0.1:3000;
+      proxy_pass http://redmine:3000;
     }
     # jenkins
     location /jenkins {
-      proxy_pass http://127.0.0.1:8080;
+      proxy_pass http://jenkins:8080;
     }
   }
 }
